envoy/dynamic/listeners.yaml
version_info: "1"
resources:
  - "@type": type.googleapis.com/envoy.config.listener.v3.Listener
    name: listener_0
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 80
    filter_chains:
      - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: ingress_http
              access_log:
                - name: envoy.access_loggers.stdout
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
              http_filters:
                - name: envoy.filters.http.grpc_web
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb
                - name: envoy.filters.http.cors
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
                # - name: envoy.filters.http.connect_grpc_bridge
                #   typed_config:
                #     "@type": type.googleapis.com/envoy.extensions.filters.http.connect_grpc_bridge.v3.FilterConfig
                - name: envoy.filters.http.cache
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.cache.v3.CacheConfig
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.http.cache.simple_http_cache.v3.SimpleHttpCacheConfig
                    # # Allowed vary headers for cache key
                    # allowed_vary_headers:
                    #   - name: "accept"
                    #   - name: "accept-encoding"
                    #   - name: "content-type"
                - name: envoy.filters.http.router
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                name: local_route
                virtual_hosts:
                  - name: local_service
                    domains:
                      ["connect-go.phison.com", "connect-go.phison.com:80", "*"]
                    routes:
                      - match:
                          prefix: "/"
                          headers:
                            - name: "content-type"
                              string_match:
                                prefix: "application/grpc"
                        route:
                          cluster: connect_go_cluster
                          timeout: 30s
                      - match:
                          prefix: "/"
                        route:
                          cluster: connect_go_cluster
                          timeout: 30s
